# whiskers

./: CHANGELOG.md  Cargo.toml  README.md  default.nix  flake.nix  release-please-config.json  shell.nix
.github/workflows/: check.yml  docs.yml  flakehub.yml  lint.yml  release.yml  test.yml
docs/: GUIDE.md  astro.config.mjs  package.json  pnpm-lock.yaml  reference.md
docs/public/: CNAME
docs/reference/: command-line-options.md  tera-context-variables.md
docs/src/: content.config.ts
docs/src/content/docs/: index.mdx
docs/src/content/docs/concepts/: check-mode.mdx  color-overrides.mdx  matrix-mode.mdx  multi-flavor.mdx  overrides.mdx  project-structure.mdx  single-flavor.mdx
docs/src/content/docs/cookbook/: how-to-remove-trailing-commas.mdx  using-filter-pipelines.mdx
docs/src/content/docs/getting-started/: installation.mdx  introduction.mdx  quick-start.mdx
docs/src/content/docs/guides/: how-to-define-resuable-macros.mdx  how-to-use-standard-input-and-output.mdx
docs/src/content/docs/reference/: cli-options.mdx  context-variables.mdx  filters.mdx  frontmatter.mdx  functions.mdx  templates.mdx
docs/src/content/docs/resources/: editor-integrations.mdx  github-actions.mdx
docs/templates/: 01-simple.tera  02-custom-frontmatter.tera  03-matrix.tera
docs/tutorials/: 01-getting-started.md
src/: context.rs  css_filter.rs  filters.rs  functions.rs  lib.rs  main.rs  markdown.rs  matrix.rs  models.rs  templating.rs
tests/: cli.rs
tests/fixtures/: formats.tera  multifile.tera  singlefile-multiflavor.tera  singlefile-singleflavor.tera
tests/fixtures/ansi/: ansi.md  ansi.tera  ansi.txt
tests/fixtures/css_filter/: css_filter.md  css_filter.tera  css_filter_svg.tera
tests/fixtures/encodings/: utf16be.tera  utf16le.tera  utf8.tera  utf8bom.tera
tests/fixtures/hexformat/: custom.tera  custom.txt  default.tera  default.txt
tests/fixtures/multi/: multi.tera
tests/fixtures/read_file/: read_file.tera
tests/fixtures/single/: single.tera
