[package]
name = "catppuccin-whiskers"
version = "2.5.1"
authors = ["backwardspy <backwardspy@pigeon.life>"]
edition = "2021"
description = "😾 Soothing port creation tool for the high-spirited!"
readme = "README.md"
homepage = "https://github.com/catppuccin/whiskers/tree/main/whiskers"
repository = "https://github.com/catppuccin/whiskers"
license = "MIT"

[profile.release]
lto = true
opt-level = "z"
strip = true

[lib]
name = "whiskers"
path = "src/lib.rs"

[[bin]]
name = "whiskers"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/whiskers-{ target }{ archive-suffix }"
pkg-fmt = "bin"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
missing_errors_doc = "allow"
implicit_hasher = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
catppuccin = { version = "2.5.1", features = ["serde", "css-colors"] }
clap = { version = "4.5.30", features = ["derive"] }
clap-stdin = "0.6.0"
css-colors = "1.0.1"
detect-newline-style = "0.1.2"
encoding_rs_io = "0.1.7"
indexmap = { version = "2.7.1", features = ["serde"] }
itertools = "0.14.0"
lzma-rust = "0.1.6"
rmp-serde = "1.3.0"
semver = { version = "1.0.25", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
tempfile = "3.17.1"
tera = { version = "1.19.1", features = ["preserve_order"] }
thiserror = "2.0.11"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.3"
