[package]
name = "catppuccin-whiskers"
version = "2.7.0"
edition = "2021"
description = "😾 Soothing port creation tool for the high-spirited!"
readme = "README.md"
homepage = "https://github.com/catppuccin/whiskers/tree/main/whiskers"
repository = "https://github.com/catppuccin/whiskers"
license = "MIT"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/whiskers-{ target }{ archive-suffix }"
pkg-fmt = "bin"

[lib]
name = "whiskers"
path = "src/lib.rs"

[[bin]]
name = "whiskers"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.101"
base64 = "0.22.1"
catppuccin = { version = "2.6.0", features = ["css-colors", "serde"] }
clap = { version = "4.5.59", features = ["derive"] }
clap-stdin = "0.8.0"
detect-newline-style = "0.1.2"
encoding_rs_io = "0.1.7"
farver = "3.1.0"
indexmap = { version = "2.13.0", features = ["serde"] }
itertools = "0.14.0"
lzma-rust = "0.1.7"
rmp-serde = "1.3.1"
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tempfile = "3.25.0"
tera = { version = "1.20.1", features = ["preserve_order"] }
thiserror = "2.0.18"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"

[lints.clippy]
all = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
implicit_hasher = "allow"
missing_errors_doc = "allow"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"

[profile.release]
opt-level = "z"
strip = true
lto = true
